--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
+    <title>Scrape a news article</title>
     <style>
       body { background-color: #F2F6D0 }
       #wrapper {
@@ -39,7 +39,7 @@
   <body>
     <div id="wrapper">
       <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
+      <h2><i>Would you like to leave a note.</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
